# YOLOv5-TensorRT-Api-Implementation

./: .gitignore  CMakeLists.txt  README.md  main.cpp  model_m_red_new.txt  model_structure.txt  model_structure_s.txt  yololayer.cu  yololayer.hpp  yolov5m.yaml
include/: config.h  logging.hpp  types.h
plugin/: yololayer.hpp
